fix: issue faced on safari browser for Blog author photo and navbar  backdrop

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -39,6 +39,10 @@
       0 0 5px #30ede6,
       0 0 10px #30ede6;
   }
+  
+  .backdrop-blur-3xl{
+    -webkit-backdrop-filter: blur(64px);
+  }
 }
 
 html,
